Fix double scroll bar issue
Add styling to library name for mobile design

--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,14 @@ footer {
   height: var(--library-footer);
 }
 
+.library-name {
+  text-align: center;
+  padding: 0.5rem;
+}
+
 .library-main {
+  min-height: var(--library-main);
+
   & aside {
     display: flex;
     justify-content: center;
